@@ -14,6 +14,7 @@ Fixes and improvements:
 - Fix Registration template not validating password correctly
 - Exclude resources with unchecked "Use alias in URI" from breadcrumbs
 - Make icons work inside CB chunk previews
+- Make check for detecting SeoTab plugin watertight
 
 
 ## Romanesco Patterns 0.14.0
